hello-itsf/itsf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itsf-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - hello-itsf.local.domain
    secretName: itsf-tls
  rules:
  - host: hello-itsf.local.domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itsf-nginx-service
            port:
              number: 80
